# php-scanner

./: .gitignore  Cargo.toml  README.md
rules/: droppers.yar  obfuscation.yar  webshells.yar
src/: loader.rs  main.rs  report.rs  scanner.rs
