[package]
name = "php-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
clap = { version = "4", features = ["derive"] }
yara = "0.28"
colored = "2"
indicatif = { version = "0.17", features = ["rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
